@@ -16,6 +16,9 @@ Revision history for SPVM
         * Remove get_archlibexp, set_archlibexp of SPVM::Builder::Config
         * remove get_shrpenv, and set_shrpenv. shrpenv config is not used when linking
         * SPVM::Builder::CC->link don't depend on Perl compiled environment as possible.
+        
+        [BUG FIX]
+        * add push_lib_dirs of SPVM::Builder::Config. This is documented but doesn't exist.
 0.9018  2021-12-11
         [CHANGES]
         * Depends on ExtUtils::CBuilder for Perl 5.8
